# AutogenQwen3

./: README.md  build_wheel.sh  pyproject.toml  qwen_client.py  requirements.txt
qwen3_client/: __init__.py  client.py
src/qwen3_autogen_client/: __init__.py  qwen_client.py
